src/test/ui/match/match-fn-call.stderr
error[E0164]: expected tuple struct/variant, found method `<Path>::new`
  --> $DIR/match-fn-call.rs:6:9
   |
LL |         Path::new("foo") => println!("foo"),
   |         ^^^^^^^^^^^^^^^^ not a tuple variant or struct

error[E0164]: expected tuple struct/variant, found method `<Path>::new`
  --> $DIR/match-fn-call.rs:8:9
   |
LL |         Path::new("bar") => println!("bar"),
   |         ^^^^^^^^^^^^^^^^ not a tuple variant or struct

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0164`.
